# iris.k8s

./: README.md  iris_classifier.joblib  pyproject.toml
.github/workflows/: build.yml
docker/: Dockerfile  docker-compose.yaml
docker/iris-helm/: Chart.yaml  iris-helm-0.1.0.tgz  iris-helm-1.0.0.tgz  values.yaml
docker/iris-helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  iris.yaml  service.yaml  serviceaccount.yaml
docker/iris-helm/templates/tests/: test-connection.yaml
iris/: iris_pred.py
tests/: test_iris_pred.py
