[tool.poetry]
name = "iris"
version = "0.1.0"
description = ""
authors = ["Juan Sebastián Ramírez Artiles <juanseraar@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.1.3"
joblib = "^1.2.0"
fastapi = "^0.87.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
