[tool.poetry]
name = "iris"
version = "1.0.2"
description = ""
authors = ["Juan Sebastián Ramírez Artiles <juanseraar@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.1.3"
joblib = "^1.2.0"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.6"
mypy = "^0.991"
pytest = "^7.2.0"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
